--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,16 +7,16 @@
     --background: #fdfdfd;
     --aside: #e9e9e9;
     --foreground: #f3f3f3;
-    --primary: #15803d;
+    --primary: #0055FF;
     --primary-foreground: #ffffff;
     --secondary: #f5f5f5;
     --secondary-foreground: #374151;
-    --accent: #3ee680;
-    --accent-foreground: #15803d;
+    --accent: #0055FF;
+    --accent-foreground: #ffffff;
     --border: #e5e7eb;
     --input: #e5e7eb;
-    --button-text: #15803d;
-    --title: #080444;
+    --button-text: #ffffff;
+    --title: #000000;
     --body: #7e7e7e;
     --transition-duration: 0.3s;
     --transition-timing: cubic-bezier(0.4, 0, 0.2, 1);
@@ -218,7 +218,7 @@ code {
 }
 
 .prose blockquote {
-    border-left: 4px solid #059669;
+    border-left: 4px solid #0055FF;
     margin: 1.5rem 0;
     padding-left: 1rem;
     color: #6b7280;
@@ -336,7 +336,7 @@ code.inline-code-block::after {
 }
 
 .heading-link:hover {
-  color: #059669;
+  color: #0055FF;
 }
 
 .heading-link svg {
